--- a/css/style.css
+++ b/css/style.css
@@ -2365,14 +2365,14 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #212529;
-  background-color: #FDAC53;
-  border-color: #FDAC53;
+  background-color: #28a745;
+  border-color: #28a745;
 }
 
 .btn-primary:hover {
   color: #212529;
-  background-color: #fd9a2d;
-  border-color: #fc9421;
+  background-color: #28a745;
+  border-color: #28a745;
 }
 
 .btn-primary:focus, .btn-primary.focus {
@@ -9572,7 +9572,7 @@ h6,
 }
 
 .carousel-indicators .active {
-  background-color: #FDAC53;
+  background-color: #28a745;
 }
 
 @media (max-width: 991.98px) {
