--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-:root {
+ :root {
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -2371,8 +2371,8 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
   color: #212529;
-  background-color: #28a745;
-  border-color: #28a745;
+  background-color: #20c997;
+  border-color: #20c997;
 }
 
 .btn-primary:focus, .btn-primary.focus {
@@ -9508,7 +9508,7 @@ h6,
 
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #FDAC53;
+  color: #28a745;
 }
 
 @media (max-width: 991.98px) {
